fixed tablet version picture not visible bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -741,6 +741,10 @@ body {
   }
 }
 
+.ingredients-section-title {
+  margin-bottom: 25px;
+}
+
 .ingredients-text {
   width: 335px;
   text-align: center;
